force-app/main/default/objects/ServiceAppointment/fields/OEM_Email__c.field-meta.xml
<CustomField>
    <fullName>OEM_Email__c</fullName>
    <label>Service Supporters Email</label>
    <type>Email</type>
</CustomField>