force-app/main/default/objects/ServiceAppointment/fields/OEM_Phone__c.field-meta.xml
<CustomField>
    <fullName>OEM_Phone__c</fullName>
    <label>Service Supporter Phone</label>
    <type>Phone</type>
</CustomField>