force-app/main/default/objects/ServiceAppointment/fields/Service_Supporter__c.field-meta.xml
<CustomField>
    <fullName>Service_Supporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Supporter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>OEM/Service Supporter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>