force-app/main/default/objects/ServiceAppointment/fields/Technician_Email__c.field-meta.xml
<CustomField>
    <fullName>Technician_Email__c</fullName>
    <label>Technician Email</label>
    <type>Email</type>
</CustomField>